sitepreview/trust/v1.3.0/Requirements-UtilizeVDHC.md
# Utilize a Verifiable Digital Health Certificate - WHO SMART Trust v1.3.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Utilize a Verifiable Digital Health Certificate**

## Requirements: Utilize a Verifiable Digital Health Certificate (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/Requirements/UtilizeVDHC | *Version*:1.3.0 |
| Active as of 2025-10-27 | *Computable Name*:Utilize VDHC |

 
Utilize a Verifiable Digital Health Certificate that was provided by a Holder 

* Statements: Contact Email
  * Steps in the requirement:1. **Ingest VDHC**:A user of a Receiver system receives a Verfiable Digital Health Certificate from a Holder. The user ingests the Verifiable Digital Health Certificate into the Receiver system. The means of conveyance and how the Verifiable Digital Health Certificate is rendered is depedent on the use context.
1. **Retrieve matching keys**:Retrieve and/or filter from an apporopriate PKI material distribution endpoint the set of public keys that match the key identifier (kid), trust domain code, participant code, and/or key usage code as applicable to the context of use of the Verfiable Digital Health Certificate.
1. **Compute Hash**:As appropriate to the content type of the Verfiable Digtial Health Certificate, compute the hash of the content, and use the retrieved public keys(s) to try to verify the signature against the hashed value.
1. **Display verified content**:Display verified cotent to the user of the Reciever system.
1. **Execute business rules**:Execute zero or more business rules against the Verifiable Digital Health Certificate that was provided by a Holder. Results of the execution of the business rules are displayed to the user of the Receiver system.: No contact email has been registered.
* Statements: Jurisdiction
  * Steps in the requirement:1. **Ingest VDHC**:A user of a Receiver system receives a Verfiable Digital Health Certificate from a Holder. The user ingests the Verifiable Digital Health Certificate into the Receiver system. The means of conveyance and how the Verifiable Digital Health Certificate is rendered is depedent on the use context.
1. **Retrieve matching keys**:Retrieve and/or filter from an apporopriate PKI material distribution endpoint the set of public keys that match the key identifier (kid), trust domain code, participant code, and/or key usage code as applicable to the context of use of the Verfiable Digital Health Certificate.
1. **Compute Hash**:As appropriate to the content type of the Verfiable Digtial Health Certificate, compute the hash of the content, and use the retrieved public keys(s) to try to verify the signature against the hashed value.
1. **Display verified content**:Display verified cotent to the user of the Reciever system.
1. **Execute business rules**:Execute zero or more business rules against the Verifiable Digital Health Certificate that was provided by a Holder. Results of the execution of the business rules are displayed to the user of the Receiver system.: 
* Statements: Derived from
  * Steps in the requirement:1. **Ingest VDHC**:A user of a Receiver system receives a Verfiable Digital Health Certificate from a Holder. The user ingests the Verifiable Digital Health Certificate into the Receiver system. The means of conveyance and how the Verifiable Digital Health Certificate is rendered is depedent on the use context.
1. **Retrieve matching keys**:Retrieve and/or filter from an apporopriate PKI material distribution endpoint the set of public keys that match the key identifier (kid), trust domain code, participant code, and/or key usage code as applicable to the context of use of the Verfiable Digital Health Certificate.
1. **Compute Hash**:As appropriate to the content type of the Verfiable Digtial Health Certificate, compute the hash of the content, and use the retrieved public keys(s) to try to verify the signature against the hashed value.
1. **Display verified content**:Display verified cotent to the user of the Reciever system.
1. **Execute business rules**:Execute zero or more business rules against the Verifiable Digital Health Certificate that was provided by a Holder. Results of the execution of the business rules are displayed to the user of the Receiver system.: This requirement is not derived from another requriement.
* Statements: Derivatives
  * Steps in the requirement:1. **Ingest VDHC**:A user of a Receiver system receives a Verfiable Digital Health Certificate from a Holder. The user ingests the Verifiable Digital Health Certificate into the Receiver system. The means of conveyance and how the Verifiable Digital Health Certificate is rendered is depedent on the use context.
1. **Retrieve matching keys**:Retrieve and/or filter from an apporopriate PKI material distribution endpoint the set of public keys that match the key identifier (kid), trust domain code, participant code, and/or key usage code as applicable to the context of use of the Verfiable Digital Health Certificate.
1. **Compute Hash**:As appropriate to the content type of the Verfiable Digtial Health Certificate, compute the hash of the content, and use the retrieved public keys(s) to try to verify the signature against the hashed value.
1. **Display verified content**:Display verified cotent to the user of the Reciever system.
1. **Execute business rules**:Execute zero or more business rules against the Verifiable Digital Health Certificate that was provided by a Holder. Results of the execution of the business rules are displayed to the user of the Receiver system.: This requirement has the following derivatives:
* Statements: Participating Actors
  * Steps in the requirement:1. **Ingest VDHC**:A user of a Receiver system receives a Verfiable Digital Health Certificate from a Holder. The user ingests the Verifiable Digital Health Certificate into the Receiver system. The means of conveyance and how the Verifiable Digital Health Certificate is rendered is depedent on the use context.
1. **Retrieve matching keys**:Retrieve and/or filter from an apporopriate PKI material distribution endpoint the set of public keys that match the key identifier (kid), trust domain code, participant code, and/or key usage code as applicable to the context of use of the Verfiable Digital Health Certificate.
1. **Compute Hash**:As appropriate to the content type of the Verfiable Digtial Health Certificate, compute the hash of the content, and use the retrieved public keys(s) to try to verify the signature against the hashed value.
1. **Display verified content**:Display verified cotent to the user of the Reciever system.
1. **Execute business rules**:Execute zero or more business rules against the Verifiable Digital Health Certificate that was provided by a Holder. Results of the execution of the business rules are displayed to the user of the Receiver system.: * [Receiver](ActorDefinition-Receiver.md)


